[package]
name = "cogni-tool-search"
version = "0.1.0"
edition = "2024"
description = "Search tool for the Cogni framework"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cogni-core = { path = "../../core" }
anyhow = "1.0"
log = "0.4"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tantivy = "0.24"
rust-stemmers = "1.2"
tracing = "0.1"
url = "2.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = { workspace = true }
